--- a/YachtDicePrototype2/YachtDicePrototype2.vcxproj
+++ b/YachtDicePrototype2/YachtDicePrototype2.vcxproj
@@ -189,6 +189,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="YachtDice1Dlg.h" />
     <ClInclude Include="YachtDicePrototype2.h" />
     <ClInclude Include="YachtDicePrototype2Dlg.h" />
   </ItemGroup>
@@ -201,6 +202,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="YachtDice1Dlg.cpp" />
     <ClCompile Include="YachtDicePrototype2.cpp" />
     <ClCompile Include="YachtDicePrototype2Dlg.cpp" />
   </ItemGroup>
@@ -211,8 +213,19 @@
     <None Include="res\YachtDicePrototype2.rc2" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\..\..\..\..\Downloads\YachtDice1-main (1)\YachtDice1-main\YachtDice1\res\ChooseCategory.bmp" />
+    <Image Include="..\..\..\..\..\Downloads\YachtDice1-main (1)\YachtDice1-main\YachtDice1\res\dice_1.bmp" />
+    <Image Include="..\..\..\..\..\Downloads\YachtDice1-main (1)\YachtDice1-main\YachtDice1\res\dice_2.bmp" />
+    <Image Include="..\..\..\..\..\Downloads\YachtDice1-main (1)\YachtDice1-main\YachtDice1\res\dice_3.bmp" />
+    <Image Include="..\..\..\..\..\Downloads\YachtDice1-main (1)\YachtDice1-main\YachtDice1\res\dice_4.bmp" />
+    <Image Include="..\..\..\..\..\Downloads\YachtDice1-main (1)\YachtDice1-main\YachtDice1\res\dice_5.bmp" />
+    <Image Include="..\..\..\..\..\Downloads\YachtDice1-main (1)\YachtDice1-main\YachtDice1\res\dice_6.bmp" />
+    <Image Include="..\..\..\..\..\Downloads\YachtDice1-main (1)\YachtDice1-main\YachtDice1\res\playBackground.bmp" />
+    <Image Include="..\..\..\..\..\Downloads\YachtDice1-main (1)\YachtDice1-main\YachtDice1\res\Reroll.bmp" />
+    <Image Include="..\..\..\..\..\Downloads\YachtDice1-main (1)\YachtDice1-main\YachtDice1\res\ROLL.bmp" />
     <Image Include="DUAL.bmp" />
     <Image Include="qMark.bmp" />
+    <Image Include="res\bitmap5.bmp" />
     <Image Include="res\YachtDicePrototype2.ico" />
     <Image Include="SINGLE.bmp" />
     <Image Include="START.bmp" />
