--- a/YachtDicePrototype2/YachtDicePrototype2.vcxproj.filters
+++ b/YachtDicePrototype2/YachtDicePrototype2.vcxproj.filters
@@ -122,5 +122,8 @@
     <Image Include="res\bitmap5.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Enter your username.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
