--- a/YachtDicePrototype2/YachtDicePrototype2.vcxproj
+++ b/YachtDicePrototype2/YachtDicePrototype2.vcxproj
@@ -189,6 +189,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="WinnerDlg.h" />
     <ClInclude Include="YachtDice1Dlg.h" />
     <ClInclude Include="YachtDicePrototype2.h" />
     <ClInclude Include="YachtDicePrototype2Dlg.h" />
@@ -202,6 +203,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="WinnerDlg.cpp" />
     <ClCompile Include="YachtDice1Dlg.cpp" />
     <ClCompile Include="YachtDicePrototype2.cpp" />
     <ClCompile Include="YachtDicePrototype2Dlg.cpp" />
