이나경 중간 저장

--- a/YachtDicePrototype2/YachtDicePrototype2.vcxproj
+++ b/YachtDicePrototype2/YachtDicePrototype2.vcxproj
@@ -234,6 +234,7 @@
     <Image Include="dice_6.bmp" />
     <Image Include="DUAL.bmp" />
     <Image Include="Enter your username.bmp" />
+    <Image Include="MAIN.bmp" />
     <Image Include="pepe1.bmp" />
     <Image Include="pepe2.bmp" />
     <Image Include="playBackground.bmp" />
