이나경 중간 저장

--- a/YachtDicePrototype2/YachtDicePrototype2.vcxproj
+++ b/YachtDicePrototype2/YachtDicePrototype2.vcxproj
@@ -212,6 +212,7 @@
     <ResourceCompile Include="YachtDicePrototype2.rc" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="hand_cursor.cur" />
     <None Include="res\YachtDicePrototype2.rc2" />
   </ItemGroup>
   <ItemGroup>
