--- a/YachtDicePrototype2/YachtDicePrototype2.vcxproj
+++ b/YachtDicePrototype2/YachtDicePrototype2.vcxproj
@@ -189,6 +189,8 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TUTORIAL1.h" />
+    <ClInclude Include="TUTORIAL2.h" />
     <ClInclude Include="WinnerDlg.h" />
     <ClInclude Include="YachtDice1Dlg.h" />
     <ClInclude Include="YachtDicePrototype2.h" />
@@ -203,6 +205,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TUTORIAL1.cpp" />
+    <ClCompile Include="TUTORIAL2.cpp" />
     <ClCompile Include="WinnerDlg.cpp" />
     <ClCompile Include="YachtDice1Dlg.cpp" />
     <ClCompile Include="YachtDicePrototype2.cpp" />
@@ -245,6 +249,7 @@
     <Image Include="qMark.bmp" />
     <Image Include="Reroll.bmp" />
     <Image Include="res\bitmap5.bmp" />
+    <Image Include="res\free-icon-dice-3425958.ico" />
     <Image Include="res\YachtDicePrototype2.ico" />
     <Image Include="ROLL.bmp" />
     <Image Include="SINGLE.bmp" />
