--- a/YachtDicePrototype2/YachtDicePrototype2.vcxproj.filters
+++ b/YachtDicePrototype2/YachtDicePrototype2.vcxproj.filters
@@ -197,5 +197,11 @@
     <Image Include="res\free-icon-dice-3425958.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="NEXT.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="PREVIOUS.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
